--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion - Pronote Beta</title>
-    <link rel="stylesheet" href="css/login-styles.css">
+    <link rel="stylesheet" href="login-styles.css">
 </head>
 <body>
     <div class="login-container">
@@ -25,6 +25,6 @@
         </div>
     </div>
 
-    <script src="js/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
